<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zero_value"
        android:gravity="end"
        android:textSize="50sp"
        android:ems="10"
        android:id="@+id/etResult" />

    <TableLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">
        <TableRow>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus"
                android:id="@+id/buttonPlus"
                android:layout_column="0" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:id="@+id/buttonMinus"
                android:layout_column="0" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/divide"
                android:id="@+id/buttonDivide"
                android:layout_column="0" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/multiply"
                android:id="@+id/buttonMultiply"
                android:layout_column="0" />
        </TableRow>

        <TableRow>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/power"
                android:id="@+id/buttonPower"
                android:layout_column="0" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/sqrt"
                android:id="@+id/buttonSqrt"
                android:layout_column="0" />
        </TableRow>

        <TableRow>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/one"
                android:id="@+id/button1"
                android:layout_column="0" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/two"
                android:id="@+id/button2"
                android:layout_column="0" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/three"
                android:id="@+id/button3"
                android:layout_column="0" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/four"
                android:id="@+id/button4"
                android:layout_column="0" />
        </TableRow>

        <TableRow>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/five"
                android:id="@+id/button5"
                android:layout_column="0" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/six"
                android:id="@+id/button6"
                android:layout_column="0" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/seven"
                android:id="@+id/button7"
                android:layout_column="0" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/eight"
                android:id="@+id/button8"
                android:layout_column="0" />
        </TableRow>

        <TableRow>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/nine"
                android:id="@+id/button9"
                android:layout_column="0" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:id="@+id/button0"
                android:layout_column="0" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel_sign"
                android:id="@+id/buttonCancel"
                android:layout_column="0" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/equal_sign"
                android:id="@+id/buttonEqual"
                android:layout_column="0" />
        </TableRow>
    </TableLayout>
</LinearLayout>
